<resources>
    <string name="alivc_common_no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="alivc_common_no_record_bluetooth_permission">没有权限使用蓝牙，请开启蓝牙权限</string>
    <string name="alivc_common_no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="alivc_common_no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="alivc_common_no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="alivc_common_no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
    <string name="alivc_common_note">提示</string>
    <string name="alivc_common_confirm">确认</string>
    <string name="alivc_common_no_permission">没有权限</string>
    <string name="aliyun_common_confirm">确定</string>
    <string name="aliyun_common_cancel">取消</string>
    <string name="aliyun_common_update_app">发现新版本，请升级</string>
    <string name="aliyun_common_updating">升级中</string>
    <string name="alivc_common_operate_success">操作成功</string>
    <string name="alivc_common_operate_fail">操作失败</string>
    <string name="alivc_common_loading">正在加载</string>
    <string name="alivc_common_loading_end">加载完毕</string>
    <string name="alivc_common_device_memory_not_enough">设备内存不足，请及时清理</string>
    <string name="alivc_common_creating_video_remind">正在进行视频合成，确定要放弃吗？</string>
    <string name="alivc_common_download">下载</string>
    <string name="alivc_common_cancel">取消</string>
    <string name="alivc_common_no_free_memory">剩余磁盘空间不足</string>
    <string name="alivc_media_setting_import_edit">导入编辑</string>
    <string name="alivc_media_frame_rate">帧率</string>
    <string name="alivc_media_gop">关键帧间隔</string>
    <string name="alivc_media_frame_rate_hint">建议20-30，默认30</string>
    <string name="alivc_media_gop_hint">建议1-300，默认250</string>
    <string name="alivc_media_resolution">分辨率</string>
    <string name="alivc_media_crop_mode">裁剪模式</string>
    <string name="alivc_media_mode_fill">填充</string>
    <string name="alivc_media_mode_crop">裁剪</string>
    <string name="alivc_media_start_import">开始导入</string>
    <string name="alivc_media_gallery_all_media">相机胶卷</string>
    <string name="alivc_media_resolution_1_1">540*540</string>
    <string name="alivc_media_resolution_3_4">540*720</string>
    <string name="alivc_media_resolution_9_16">540*960</string>
    <string name="alivc_media_video_quality">Quality</string>
    <string name="alivc_media_video_quality_low">低</string>
    <string name="alivc_media_video_quality_meidan">中</string>
    <string name="alivc_media_video_quality_high">高</string>
    <string name="alivc_media_video_quality_super">极高</string>
    <string name="alivc_media_wait">请稍候</string>
    <string name="alivc_media_video_crop_erroe">视频格式不支持</string>
    <string name="alivc_media_sdcard_not_ready">SDCARD 没有准备好</string>
    <string name="alivc_media_video_duration">%1$02d:%2$02d:%3$02d</string>
    <string name="alivc_media_next_camera_roll_import">下一步</string>
    <string name="alivc_media_message_max_duration_import">视频总时长不超过5分钟，请裁剪后继续!</string>
    <string name="alivc_media_total_duration_label_import">总时长</string>
    <string name="alivc_media_please_select_video">请选择视频</string>
    <string name="alivc_media_film_tail">片尾</string>
    <string name="alivc_media__hardware_encoder">硬编</string>
    <string name="alivc_media__openh264_encoder">OpenH264软编</string>
    <string name="alivc_media__ffmpeg_encoder">FFmpeg软编e</string>
    <string name="alivc_media_aliyun_video_codec">Encoding</string>
    <string name="alivc_base_beauty">美颜</string>
    <string name="alivc_base_beauty_face">美肌</string>
    <string name="alivc_base_beauty_shape">美型</string>
    <string name="alivc_base_fine_tune">微调</string>
    <string name="alivc_base_stickers">人脸贴纸</string>
    <string name="alivc_base_filter">滤镜</string>
    <string name="alivc_record_anim_filter">动效滤镜</string>
    <string name="alivc_base_beauty_buffing">磨皮</string>
    <string name="alivc_base_beauty_whitening">美白</string>
    <string name="alivc_base_beauty_blush">红润</string>
    <string name="alivc_base_beauty_sharpen">锐化</string>
    <string name="alivc_base_beauty_bigeye">大眼</string>
    <string name="alivc_base_beauty_thinface">瘦脸</string>
    <string name="alivc_base_beauty_cutface">窄脸</string>
    <string name="alivc_base_beauty_longface">脸长</string>
    <string name="alivc_base_beauty_lowerjaw">下巴</string>
    <string name="alivc_base_beauty_thinnose">瘦鼻</string>
    <string name="alivc_base_beauty_mouthwidth">唇宽</string>
    <string name="alivc_base_beauty_thinmandible">下颌</string>
    <string name="alivc_base_beauty_cutcheek">颧骨</string>
    <string name="alivc_base_version">SDK版本信息</string>
    <string name="alivc_base_beauty_level_advanced">高级</string>
    <string name="alivc_base_beauty_level_normal">普通</string>
    <string name="alivc_base_beauty_natural_face">自然脸</string>
    <string name="alivc_base_beauty_square_face">方脸</string>
    <string name="alivc_base_beauty_round_face">圆脸</string>
    <string name="alivc_base_beauty_long_face">长脸</string>
    <string name="alivc_base_beauty_pear_face">梨形脸</string>
    <string name="alivc_base_beauty_default_face">默认</string>
    <string name="alivc_base_beauty_grace_face">优雅</string>
    <string name="alivc_base_beauty_fine_face">精致</string>
    <string name="alivc_base_beauty_celebrity_face">网红</string>
    <string name="alivc_base_beauty_lovely_face">可爱</string>
    <string name="alivc_base_beauty_baby_face">婴儿</string>
    <string name="alivc_base_beauty_custom_face">自定义</string>
    <string name="alivc_base_tips_fine_tuning">点击可微调</string>
    <string name="alivc_base_beauty_copyright">高级美颜美型由faceunity提供</string>
    <string name="alivc_base_beauty_race_copyright">高级美颜美型由race提供</string>
    <string name="alivc_base_beauty_copyright_link">如何获取</string>
    <string name="alivc_base_svideo_next">下一步</string>
    <string name="alivc_base_svideo_save">保存</string>
    <string name="alivc_music_network_not_connect">网络没有连接，请检查网络</string>
    <string name="alivc_music_no_free_memory">剩余磁盘空间不足</string>
    <string name="alivc_music_empty_music">无音乐</string>
    <string name="alivc_music_select_music">选择音乐</string>
    <string name="alivc_music_online_music">在线音乐</string>
    <string name="alivc_music_local_music">本地音乐</string>
    <string name="alivc_music_copyright">由太合音乐DMH提供服务</string>
    <string name="alivc_music_copyright_link">如何获取</string>
    <string name="alivc_music_complete">完成</string>
    <string name="alivc_music_play_url_null">播放地址为空</string>
    <string name="alivc_use_gpu">使用GPU</string>
    <string name="alivc_kbps_hint">建议600-2000，默认0</string>
    <string name="alivc_resolution_1_1">540*540</string>
    <string name="alivc_resolution_3_4">540*720</string>
    <string name="alivc_resolution_9_16">540*960</string>
    <string name="alivc_video_duration">%1$02d:%2$02d:%3$02d</string>
    <string name="alivc_next_camera_roll_import">下一步</string>
    <string name="alivc_total_duration_label_import">总时长</string>
    <string name="alivc_video_param_error">Failed to crop the video</string>
    <string name="alivc_crop_setting_frame_rate_1">帧率</string>
    <string name="alivc_crop_setting_tittle">裁剪参数</string>
    <string name="alivc_crop_setting_bps">码率(kbps)</string>
    <string name="alivc_crop_setting_bps_hint">默认值为0, 根据视频质量参数计算</string>
    <string name="alivc_crop_setting_frame_rate">帧率</string>
    <string name="alivc_crop_setting_frame_rate_hint">建议20-30，默认30</string>
    <string name="alivc_crop_setting_gop">关键帧间隔</string>
    <string name="alivc_crop_setting_gop_hint">建议1-300，默认250</string>
    <string name="alivc_crop_setting_resolution">分辨率</string>
    <string name="alivc_crop_setting_resolution_360p">360p</string>
    <string name="alivc_crop_setting_resolution_480p">480p</string>
    <string name="alivc_crop_setting_resolution_540p">540p</string>
    <string name="alivc_crop_setting_resolution_720p">720p</string>
    <string name="alivc_crop_setting_crop_mode">裁剪模式</string>
    <string name="alivc_crop_setting_mode_fill">填充</string>
    <string name="alivc_crop_setting_mode_crop">裁剪</string>
    <string name="alivc_crop_setting_start_import">开始导入</string>
    <string name="alivc_crop_setting_codec">视频编码方式</string>
    <string name="alivc_crop_setting_encoder_hardware">硬编</string>
    <string name="alivc_crop_setting_encoder_openh264">OpenH264软编</string>
    <string name="alivc_crop_setting_encoder_ffmpeg">FFmpeg软编</string>
    <string name="alivc_crop_setting_ratio">视频比例</string>
    <string name="alivc_crop_setting_ratio_1_1">1:1</string>
    <string name="alivc_crop_setting_ratio_9_16">9:16</string>
    <string name="alivc_crop_setting_ratio_3_4">3:4</string>
    <string name="alivc_crop_setting_ratio_original">原比例</string>
    <string name="alivc_crop_setting_quality">视频质量</string>
    <string name="alivc_crop_setting_quality_super">优质</string>
    <string name="alivc_crop_setting_quality_high">良好</string>
    <string name="alivc_crop_setting_quality_meidan">一般</string>
    <string name="alivc_crop_setting_quality_low">较差</string>
    <string name="alivc_crop_media_tittle">相机胶卷</string>
    <string name="alivc_crop_media_sdcard_not_ready">SDCARD 没有准备好</string>
    <string name="alivc_crop_media_gif_not_support">暂时不支持gif文件裁剪</string>
    <string name="alivc_crop_video_tip_not_supported_audio">音频格式不支持</string>
    <string name="alivc_crop_video_tip_not_supported_video">视频格式不支持</string>
    <string name="alivc_crop_video_tip_crop_failed">裁剪失败</string>
    <string name="alivc_crop_video_tip_error">视频错误</string>
    <string name="edit_nav_edit">编辑</string>
    <string name="edit_nav_save_and_share">保存／分享></string>
    <string name="music_origin">原音</string>
    <string name="my_music">我的音乐</string>
    <string name="local_music">本地音乐</string>
    <string name="timeline_curr_time">%1$02d:%2$02d</string>
    <string name="empty_music">无音乐</string>
    <string name="alivc_editor_effect_filter">滤镜</string>
    <string name="alivc_editor_effect_music">音乐</string>
    <string name="alivc_editor_effect_sticker">动图</string>
    <string name="alivc_editor_effect_caption">字幕</string>
    <string name="alivc_editor_effect_mv">MV</string>
    <string name="alivc_editor_effect_sound">音效</string>
    <string name="alivc_editor_effect_effect">特效</string>
    <string name="alivc_editor_effect_time">变速</string>
    <string name="alivc_editor_effect_transition">转场</string>
    <string name="alivc_editor_effect_paint">涂鸦</string>
    <string name="alivc_editor_effect_cover">封面</string>
    <string name="alivc_editor_mananger_tittle">特效管理</string>
    <string name="alivc_editor_manager_font">字体</string>
    <string name="alivc_editor_manager_delete">删除</string>
    <string name="alivc_editor_dialog_transition_tittle">转场</string>
    <string name="alivc_editor_dialog_transition_tip_limit">一段视频无法添加转场</string>
    <string name="alivc_editor_dialog_transition_star">五角星</string>
    <string name="alivc_editor_dialog_caption_tip_text_limit">字数超出限制</string>
    <string name="alivc_editor_dialog_caption_system_font">纯文字</string>
    <string name="alivc_editor_dialog_caption_font">字体</string>
    <string name="alivc_editor_dialog_caption_font_system">系统字体</string>
    <string name="alivc_editor_dialog_caption_keyboard">键盘</string>
    <string name="alivc_editor_dialog_caption_color">颜色</string>
    <string name="alivc_editor_dialog_caption_effect">特效</string>
    <string name="alivc_editor_dialog_caption_tip_not_support">倒播时不支持添加字幕动画效果</string>
    <string name="alivc_editor_dialog_none_effect">原片</string>
    <string name="alivc_editor_dialog_mv_more">更多</string>
    <string name="alivc_editor_dialog_time_tittle">时间特效</string>
    <string name="alivc_editor_dialog_time_tip_not_support">时间特效不支持多段视频</string>
    <string name="alivc_editor_dialog_time_tip_apply">点击添加效果</string>
    <string name="alivc_editor_dialog_time_repeat">反复</string>
    <string name="alivc_editor_dialog_time_no_effect">无效果</string>
</resources>