<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/purple_200"
    android:orientation="vertical">

    <include layout="@layout/alivc_editor_include_import_action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/alivc_media_frame_rate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14" />

            <EditText
                android:id="@+id/frame_rate_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/alivc_media_frame_rate_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_media_gop"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14" />

            <EditText
                android:id="@+id/gop_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/alivc_media_gop_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_quality"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_video_quality_super"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_quality_super" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_video_quality_high"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/alivc_crop_setting_quality_high" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_video_quality_normal"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_quality_meidan" />

            </LinearLayout>

            <Button
                android:id="@+id/alivc_video_quality_low"
                style="@style/alivc_record_btn_style"
                android:layout_marginTop="15dp"
                android:text="@string/alivc_crop_setting_quality_low" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_ratio"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_video_ratio_9_16"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_ratio_9_16" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_video_ratio_3_4"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/alivc_crop_setting_ratio_3_4" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_video_ratio_1_1"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_ratio_1_1" />

            </LinearLayout>

            <Button
                android:id="@+id/alivc_video_ratio_original"
                style="@style/alivc_record_btn_style"

                android:layout_marginTop="15dp"
                android:text="@string/alivc_crop_setting_ratio_original" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_resolution"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_record_resolution_360p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_resolution_360p" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_record_resolution_480p"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/alivc_crop_setting_resolution_480p" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_record_resolution_540p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_resolution_540p" />

            </LinearLayout>

            <Button
                android:id="@+id/alivc_record_resolution_720p"
                style="@style/alivc_record_btn_style"

                android:layout_marginTop="15dp"
                android:text="@string/alivc_crop_setting_resolution_720p" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_media_crop_mode"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/radio_fill"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/alivc_crop_setting_mode_fill" />

                <Button
                    android:id="@+id/radio_crop"
                    style="@style/alivc_record_btn_style"
                    android:layout_gravity="center"
                    android:text="@string/alivc_crop_setting_mode_crop" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/alivc_media_film_tail"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/alivc_common_font_14" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/video_tail_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/MySwitchTheme" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/alivc_crop_setting_codec"
                android:textColor="@android:color/white"
                android:textSize="@dimen/alivc_common_font_14"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/alivc_edit_encoder_hardware"
                    style="@style/alivc_record_btn_style"
                    android:layout_gravity="center"
                    android:text="@string/alivc_crop_setting_encoder_hardware" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_edit_encoder_openh264"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/alivc_crop_setting_encoder_openh264" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_edit_encoder_ffmpeg"
                    style="@style/alivc_record_btn_style"
                    android:layout_gravity="center"
                    android:text="@string/alivc_crop_setting_encoder_ffmpeg" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


    <Button
        android:id="@+id/start_import"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/alivc_bg_start_record"
        android:text="@string/alivc_media_start_import"
        android:textColor="@android:color/white"
        android:textSize="@dimen/alivc_common_font_16" />

</LinearLayout>
